--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -20,9 +20,9 @@ body {
     color: hotpink;
 }
 
-.flex-container {
+.post-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -33,4 +33,26 @@ body {
     align-items: flex-end;
     align-content: center;
     line-height: 2;
+}
+
+#postHere div {
+    background-color: pink;
+    padding: 13px 22px;
+    margin: 5px 5px;
+    text-align: left;
+}
+
+#postHere h3 {
+    font-size: small;
+}
+
+#postHere h2 {
+    font-size: medium;
+    text-decoration: underline;
+}
+
+#postHere p {
+    font-size: smaller;
+    background-color: aliceblue;
+    padding: 9px;
 }
