--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
-    transition: background-color 0.3s, color 0.3s;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
 
 .light-mode {
@@ -23,4 +22,9 @@ body {
 
 .toggle-container label {
     text-align: center;
+}
+
+.toggle-container {
+    display: inline;
+    align-self: left;
 }
